--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,13 +1,4 @@
 .button {
-  display: flex;
-  align-items: center;
-  border: none;
-  font-size: 20px;
-  gap: 20px;
-  background: linear-gradient(180deg, #219653 0%, #299c35 100%);
-  padding: 25px 30px;
-  border-radius: 20px;
-  cursor: pointer;
   position: fixed;
   bottom: 50px;
   margin-top: 200px;
@@ -31,11 +22,10 @@
   .button {
     display: flex;
     justify-content: center;
-    /* position: fixed; */
-    width: 80%;
-    /* bottom: 0px; */
-    /* top: 100px; */
-    /* margin-top: 200px; */
+    font-size: 15px;
+    padding: 25px 30px;
+    bottom: 20px;
+    width: 55%;
   }
 }
 
