--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -35,14 +35,13 @@
 
 .aside-links {
   margin-top: 30px;
-  width: 46%;
   display: grid;
   gap: 10px;
   grid-template-columns: 1fr 1fr;
   font-weight: 300;
 }
 
-.aside-links >  {
+.aside-links > {
   /* display: flex; */
   /* gap: 10px; */
   color: #3c4141;
@@ -54,6 +53,9 @@
 
 .aside-socials {
   margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .aside-header > div > a {
@@ -68,6 +70,7 @@
 .title {
   transform: none;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .aside-header > div > a {
@@ -104,12 +107,19 @@
 }
 
 @media (max-width: 900px) {
+  .aside-header {
+    width: 100%;
+  }
   .contactus {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
   }
   .article,
   .aside {
     width: 100%;
+  }
+
+  .aside-links {
+    justify-content: center;
   }
 }
