--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -35,9 +35,9 @@
 
 .aside-links {
   margin-top: 30px;
-  display: grid;
+  display: flex;
   gap: 10px;
-  grid-template-columns: 1fr 1fr;
+  justify-content: flex-start;
   font-weight: 300;
 }
 
@@ -55,7 +55,8 @@
   margin-top: 20px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  gap: 10px;
+  justify-content: center;
 }
 
 .aside-header > div > a {
@@ -65,6 +66,7 @@
 
 .article {
   width: 40%;
+  text-align: center;
 }
 
 .title {
@@ -120,6 +122,6 @@
   }
 
   .aside-links {
-    justify-content: center;
+   margin-bottom: 50px;
   }
 }
